Add Comments oveflow

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/post.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/post.json
@@ -3,5 +3,6 @@
   "Like": "Like",
   "Dislike": "Dislike",
   "Comment": "Comment",
-  "AddComment": "Add comment"
+  "AddComment": "Add comment",
+  "Hide": "Hide"
 }
