--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/post.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/post.json
@@ -3,5 +3,6 @@
   "Like": "Лайк",
   "Dislike": "Дислайк",
   "Comment": "Комментарий",
-  "AddComment": "Добавить комментарий"
+  "AddComment": "Добавить комментарий",
+  "Hide": "Скрыть"
 }
