Add Members and Discussion overflow

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMembers.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMembers.json
@@ -4,5 +4,6 @@
   "AddNewPeople": "Add new people",
   "Invite": "Invite",
   "Cancel": "Cancel",
-  "RemovePeople": "Remove people from community"
+  "RemovePeople": "Remove people from community",
+  "AllMembers": "All members"
 }
