--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMembers.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMembers.json
@@ -4,5 +4,6 @@
   "AddNewPeople": "Добавить нового пользователя",
   "Invite": "Пригласить",
   "Cancel": "Отмена",
-  "RemovePeople": "Исключить из сообщества"
+  "RemovePeople": "Исключить из сообщества",
+  "AllMembers": "Все участники"
 }
