--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/discussion.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/discussion.json
@@ -12,5 +12,12 @@
   "Add": "Добавить",
   "Discussion": "Обсуждения",
   "Hide": "Скрыть",
-  "CreateDiscussion": "Создать обсуждение"
+  "CreateDiscussion": "Создать обсуждение",
+  "AllDiscussions": "Все обсуждения",
+  "Discussions": "Обсуждения",
+  "SearchDiscussion": "Поиск обсуждение",
+  "TypeDiscussion": "Название обсуждений",
+  "Clean": "Очистить",
+  "ShowSearchDiscussion": "Показать поиск обсуждений",
+  "HideSearchDiscussion": "Скрыть поиск обсуждений"
 }
