--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/members.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/members.json
@@ -1,6 +1,11 @@
 {
+  "SearchPeople": "Search people",
   "Remove": "Remove",
   "Accept": "Accept",
   "Close": "Close",
-  "Members": "Members"
+  "Members": "Members",
+  "ShowSearchPeople": "Show search people",
+  "HideSearchPeople": "Hide search people",
+  "Clean": "Clean",
+  "TypeUsername": "Type username"
 }
