--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/members.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/members.json
@@ -1,6 +1,12 @@
 {
+  "SearchPeople": "Поиск пользователей",
   "Remove": "Удалить",
   "Accept": "Подтвердить",
   "Close": "Закрыть",
-  "Members": "Участники"
+  "Members": "Участники",
+  "ShowSearchPeople": "Показать поиск пользователей",
+  "HideSearchPeople": "Скрыть поиск пользователей",
+  "Clean": "Очистить",
+  "TypeUsername": "Имя пользователя",
+  "AllPeople": "Все пользователи"
 }
