--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communities.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communities.json
@@ -6,5 +6,7 @@
   "Join": "Присоединиться",
   "Communities": "Сообщества",
   "Search": "Поиск",
-  "TypeCommunityName": "Напишите название сообщества"
+  "TypeCommunityName": "Название сообщества",
+  "ShowSearchCommunity": "Показать поиск сообществ",
+  "HideSearchCommunity": "Скрыть поиск сообществ"
 }
