--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/myEnvironment/myCommunities.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/myEnvironment/myCommunities.json
@@ -5,5 +5,7 @@
   "Hide": "Скрыть",
   "Show": "Показать",
   "Search": "Поиск",
-  "TypeCommunityName": "Напишите название сообщества"
+  "TypeCommunityName": "Название сообщества",
+  "ShowSearchCommunity": "Показать поиск сообществ",
+  "HideSearchCommunity": "Скрыть поиск сообществ"
 }
