Add transactions for remove Group chats

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/groupChat.json
@@ -15,5 +15,6 @@
   "Leave": "Leave",
   "Cancel": "Cancel",
   "Rules": "Rules",
-  "SaveChanges": "Save"
+  "SaveChanges": "Save",
+  "Remove": "Remove"
 }
