--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/groupChat.json
@@ -15,5 +15,6 @@
   "Leave": "Уйти",
   "Cancel": "Отмена",
   "Rules": "Правила",
-  "SaveChanges": "Сохранить"
+  "SaveChanges": "Сохранить",
+  "Remove": "Удалить"
 }
