--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/account/registration.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/account/registration.json
@@ -1,9 +1,21 @@
 {
   "Email": "Email address",
   "Password": "Password",
+  "ConfirmPassword": "Confirm password",
   "CheckMeOut": "Check me out",
-  "EmailExist": "This Email already reg!",
+  "EmailExist": "This Email already exist",
+  "UsernameExist": "This Username already exist",
   "Registration": "Registration",
   "Username": "Username",
-  "RememberMe": "Don't logout"
+  "PhoneNumber": "Phone number",
+  "Birthday": "Birthday",
+  "NextStep": "Next step",
+  "LastStep": "Last step",
+  "FirstName": "First name",
+  "LastName": "Last name",
+  "AboutMe": "About me",
+  "Men": "Men",
+  "Woman": "Woman",
+  "JoinToChats": "Join to chats",
+  "JoinToCommunities": "Join to communities"
 }
