--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/registration.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/account/registration.json
@@ -1,9 +1,21 @@
 {
   "Email": "Email",
   "Password": "Пароль",
+  "ConfirmPassword": "Подтверждение пароля",
   "CheckMeOut": "Оставаться в системе",
-  "EmailExist": "Такой Email уже зарегистрирован!",
+  "EmailExist": "Такой Email уже зарегистрирован",
+  "UsernameExist": "Такое имя пользователя уже зарегистрировано",
   "Registration": "Регистрация",
   "Username": "Имя пользователя",
-  "RememberMe": "Запомнить меня"
+  "PhoneNumber": "Номер телефона",
+  "Birthday": "День рождения",
+  "NextStep": "Следующий шаг",
+  "LastStep": "Предыдущий шаг",
+  "FirstName": "Имя",
+  "LastName": "Фамилия",
+  "AboutMe": "Обо мне",
+  "Men": "Муж",
+  "Woman": "Жен",
+  "JoinToChats": "Присоединиться к чатам",
+  "JoinToCommunities": "Присоединиться к сообществам"
 }
