Improve site performance

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chats.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chats.json
@@ -4,5 +4,7 @@
   "HideChats": "Hide chats",
   "CreateNewGroupChat": "Create new group chat",
   "PersonalChats": "Personal chats",
-  "SelectChat": "Select chat"
+  "SelectChat": "Select chat or",
+  "Create": "create",
+  "NewChat": "new chat"
 }
