--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/home.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/home.json
@@ -2,5 +2,8 @@
   "Communication": "Общение",
   "Analyzing": "Анализ боев",
   "Open": "Открыть",
-  "ShouldAuthorize": "необходимо авторизоваться"
+  "ShouldAuthorize": "необходимо авторизоваться",
+  "YouNeed": "Вам необходимо",
+  "Login": "Войти",
+  "InApp": "в свой аккаунт что бы продолжить использовать 'Общение'"
 }
