--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/translate.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/translate.json
@@ -3,6 +3,6 @@
   "RU": "Русский",
   "EN": "Английский",
   "Registration": "Регистрация",
-  "Login": "Вход",
+  "Login": "Войти",
   "Logout": "Выход"
 }
