--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/home.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/home.json
@@ -2,5 +2,8 @@
   "Communication": "Communication",
   "Analyzing": "Analyzing of combats",
   "Open": "Open",
-  "ShouldAuthorize": "need be authorized"
+  "ShouldAuthorize": "need be authorized",
+  "YouNeed": "You need",
+  "Login": "Login",
+  "InApp": "in your profile to continue use 'Communication'"
 }
