Extend Analysis functionality
Add new features:
 - search players for each logs and combats personality

Improve UI:
 - improve interface, more userfriendly;
 - improve visualisations

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/combatGeneralDetails.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/combatGeneralDetails.json
@@ -6,8 +6,7 @@
   "ResourcesRecovery": "Resources recovery",
   "ShowDiagram": "Show a diagram",
   "DetailsInform": "Details information",
-  "CommonInform": "Common information",
   "SelectPlayer": "Select player",
-  "Player": "Player",
-  "Skills": "Skills"
+  "Skills": "Skills",
+  "CommonInform": "Common information"
 }
