--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/generalAnalysis.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/generalAnalysis.json
@@ -10,7 +10,7 @@
   "FinishDate": "Finish date",
   "Duration": "Duration",
   "MoreDetails": "More details",
-  "MainPage": "Main page",
+  "Logs": "Logs",
   "Combats": "Combats",
   "NeedToAddSomething": "Need to add at least 1 item.",
   "Ready": "Ready",
