--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/generalAnalysis.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/generalAnalysis.json
@@ -10,7 +10,7 @@
   "FinishDate": "Окончание боя",
   "Duration": "Продолжительность",
   "MoreDetails": "Подробнее",
-  "MainPage": "Главная страница",
+  "Logs": "Логи",
   "Combats": "Бои",
   "NeedToAddSomething": "Необходимо добавить как минимум 1 элемент.",
   "Ready": "Готово",
