--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/mainInformation.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/mainInformation.json
@@ -1,5 +1,8 @@
 {
   "Logs": "Логи боев",
   "Analyzing": "Анализ",
-  "NeedToAddSomething": "Необходимо добавить как минимум 1 элемент."
+  "NeedToAddSomething": "Необходимо добавить как минимум 1 элемент.",
+  "Chat": "Чат",
+  "Discussion": "Общение",
+  "ShouldAuthorize":  "Необходимо авторизоваться"
 }
