--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/mainInformation.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/mainInformation.json
@@ -1,5 +1,8 @@
 {
   "Logs": "Logs",
   "Analyzing": "Analyzing",
-  "NeedToAddSomething": "Need to add at least 1 item."
+  "NeedToAddSomething": "Need to add at least 1 item.",
+  "Chat": "Chat",
+  "Discussion": "Discussion",
+  "ShouldAuthorize": "Should be authorize"
 }
