Improve Analysis functionality

--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/childs/playerInformation.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/childs/playerInformation.json
@@ -4,6 +4,7 @@
   "Healing": "Healing",
   "DamageTaken": "Damage taken",
   "ResourcesRecovery": "Resources recovery",
+  "Resources": "Resources",
   "Buffs": "Buffs",
   "ShowStatistics": "Show statistics",
   "OpenDamageAnalyzing": "Open damage analyzing",
