--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/combatGeneralDetails.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/combatGeneralDetails.json
@@ -8,5 +8,5 @@
   "DetailsInform": "Details information",
   "SelectPlayer": "Select player",
   "Skills": "Skills",
-  "CommonInform": "Common information"
+  "CommonInform": "Common information",
 }
