--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/generalAnalysis.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/generalAnalysis.json
@@ -15,5 +15,7 @@
   "NeedToAddSomething": "Need to add at least 1 item.",
   "Ready": "Ready",
   "NotReady": "Not ready",
+  "Win": "Win",
+  "Lose": "Lose",
   "NeedWait": "You have to wait until the fight is ready to inspection"
 }
