--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMembers.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/community/communityMembers.json
@@ -5,5 +5,6 @@
   "Invite": "Invite",
   "Cancel": "Cancel",
   "RemovePeople": "Remove people from community",
-  "AllMembers": "All members"
+  "AllMembers": "All members",
+  "Close": "Close"
 }
