--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/childs/playerInformation.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/childs/playerInformation.json
@@ -4,6 +4,7 @@
   "Healing": "Исцеление",
   "DamageTaken": "Полученный урон",
   "ResourcesRecovery": "Восстановлено ресурсов",
+  "Resources": "Ресурсы",
   "Buffs": "Усиления",
   "ShowStatistics": "Показать статистику",
   "OpenDamageAnalyzing": "Открыть анализ урона",
