--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/combatDetailsChart.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/combatDetailsChart.json
@@ -1,5 +1,5 @@
 {
-  "Cancel": "Отмена",
+  "ClearInterval": "Очистить интервал",
   "StartOfInterval": "Начало интервала",
   "FinishOfInterval": "Конец интервала",
   "SelectInterval": "Выбрать интервал",
