--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/generalAnalysis.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/combatDetails/generalAnalysis.json
@@ -15,5 +15,7 @@
   "NeedToAddSomething": "Необходимо добавить как минимум 1 элемент.",
   "Ready": "Готово",
   "NotReady": "Не готово",
+  "Win": "Победа",
+  "Lose": "Поражение",
   "NeedWait": "Необходимо дождать пока бой будет готов к осмотру"
 }
