--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMembers.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMembers.json
@@ -5,5 +5,6 @@
   "Invite": "Пригласить",
   "Cancel": "Отмена",
   "RemovePeople": "Исключить из сообщества",
-  "AllMembers": "Все участники"
+  "AllMembers": "Все участники",
+  "Close": "Закрыть"
 }
