--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMenu.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/community/communityMenu.json
@@ -12,5 +12,6 @@
   "LeaveOwnerConfirm": "ВНИМАНИЕ: Вы являетесь создателем сообщества и если выйдите, сообщество будет удалено со всеми данными. Все данные будут удалены безвозвратно!!!",
   "LeaveAlert": "Выход из сообщества",
   "InviteSuccess": "Приглашение отправлено",
-  "InviteFailed": "Что-то пошло не так. Приглашение не отправлено"
+  "InviteFailed": "Что-то пошло не так. Приглашение не отправлено",
+  "Close": "Закрыть"
 }
