--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/home.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/home.json
@@ -2,8 +2,9 @@
   "Communication": "Общение",
   "Analyzing": "Анализ боев",
   "Open": "Открыть",
-  "ShouldAuthorize": "необходимо авторизоваться",
+  "ShouldAuthorize": "Необходимо авторизоваться",
   "YouNeed": "Вам необходимо",
   "Login": "Войти",
-  "InApp": "в свой аккаунт что бы продолжить использовать 'Общение'"
+  "InApp": "в свой аккаунт что бы продолжить использовать 'Общение'",
+  "GoToLogin": "Перейти к странице 'Войти'"
 }
