--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/combatDetailsChart.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/combatDetails/combatDetailsChart.json
@@ -1,5 +1,5 @@
 {
-  "Cancel": "Cancel",
+  "ClearInterval": "Clear interval",
   "StartOfInterval": "Start of interval",
   "FinishOfInterval": "Finish of interval",
   "SelectInterval": "Select interval",
