--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/home.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/home.json
@@ -2,8 +2,9 @@
   "Communication": "Communication",
   "Analyzing": "Analyzing of combats",
   "Open": "Open",
-  "ShouldAuthorize": "need be authorized",
+  "ShouldAuthorize": "Need be authorized",
   "YouNeed": "You need",
   "Login": "Login",
-  "InApp": "in your profile to continue use 'Communication'"
+  "InApp": "in your profile to continue use 'Communication'",
+  "GoToLogin": "Go to 'Login' page"
 }
