--- a/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.resx
@@ -117,8 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AllCombatsSaved" xml:space="preserve">
+    <value>All combats saved!</value>
+  </data>
   <data name="Buffs" xml:space="preserve">
     <value>Buffs</value>
+  </data>
+  <data name="CombatUploaded" xml:space="preserve">
+    <value>Combat uploaded:   </value>
   </data>
   <data name="Damage" xml:space="preserve">
     <value>Damage</value>
@@ -161,6 +167,9 @@
   </data>
   <data name="Title" xml:space="preserve">
     <value>Analyzing</value>
+  </data>
+  <data name="Uploading" xml:space="preserve">
+    <value>Uploading...</value>
   </data>
   <data name="Win" xml:space="preserve">
     <value>Win</value>
