--- a/src/CombatAnalysis.App/Localizations/Resources/Registration/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/Registration/Resource.ru.resx
@@ -117,14 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AboutMe" xml:space="preserve">
+    <value>Обо мне</value>
+  </data>
   <data name="Back" xml:space="preserve">
     <value>Назад</value>
+  </data>
+  <data name="Birthday" xml:space="preserve">
+    <value>Дата рождения</value>
   </data>
   <data name="Email" xml:space="preserve">
     <value>Email</value>
   </data>
   <data name="EmailIsAlready" xml:space="preserve">
     <value>Аккаунт с указаным Email уже существует</value>
+  </data>
+  <data name="FirstName" xml:space="preserve">
+    <value>Имя</value>
+  </data>
+  <data name="LastName" xml:space="preserve">
+    <value>Фамилия</value>
+  </data>
+  <data name="Man" xml:space="preserve">
+    <value>Man</value>
   </data>
   <data name="NeedAddData" xml:space="preserve">
     <value>Необходмо указать данные для регистрации</value>
@@ -138,6 +153,9 @@
   <data name="PasswordNotConfirmated" xml:space="preserve">
     <value>Пароль должен совпадать с Повторным паролем</value>
   </data>
+  <data name="PhoneNumber" xml:space="preserve">
+    <value>Номер телефона</value>
+  </data>
   <data name="Registration" xml:space="preserve">
     <value>Регистрация</value>
   </data>
@@ -146,5 +164,11 @@
   </data>
   <data name="Title" xml:space="preserve">
     <value>Регистрация</value>
+  </data>
+  <data name="Username" xml:space="preserve">
+    <value>Имя пользователя</value>
+  </data>
+  <data name="Woman" xml:space="preserve">
+    <value>Woman</value>
   </data>
 </root>
