--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chats.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/en/communication/chats/chats.json
@@ -3,7 +3,7 @@
   "ShowChats": "Show chats",
   "HideChats": "Hide chats",
   "CreateNewGroupChat": "Create new group chat",
-  "PersonalChats": "Personal chats",
+  "PersonalChats": "Messages",
   "SelectChat": "Select chat or",
   "Create": "create",
   "NewChat": "new chat"
