--- a/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chats.json
+++ b/src/CombatAnalysis.WebApp/ClientApp/public/locales/ru/communication/chats/chats.json
@@ -3,7 +3,7 @@
   "ShowChats": "Показать чаты",
   "HideChats": "Скрыть чаты",
   "CreateNewGroupChat": "Создать новый групповой чат",
-  "PersonalChats": "Личные сообщения",
+  "PersonalChats": "Сообщения",
   "SelectChat": "Выберите чат или",
   "Create": "создайте",
   "NewChat": "новый чат"
