--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
@@ -117,11 +117,44 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CLearFilters" xml:space="preserve">
+    <value>Очистить все фильтры</value>
+  </data>
+  <data name="CombatName" xml:space="preserve">
+    <value>Название боя</value>
+  </data>
   <data name="Damage" xml:space="preserve">
     <value>Урон</value>
   </data>
+  <data name="DamagePerSecond" xml:space="preserve">
+    <value>Урон в сек.</value>
+  </data>
+  <data name="EditValue" xml:space="preserve">
+    <value>Редактировать значение</value>
+  </data>
   <data name="Healing" xml:space="preserve">
     <value>Исцеление</value>
+  </data>
+  <data name="HealingPerSecond" xml:space="preserve">
+    <value>Исцеление в сек.</value>
+  </data>
+  <data name="MinDamage" xml:space="preserve">
+    <value>Мин. урон</value>
+  </data>
+  <data name="MinDPS" xml:space="preserve">
+    <value>Мин. урон в сек.</value>
+  </data>
+  <data name="MinHeal" xml:space="preserve">
+    <value>Мин. исцеление</value>
+  </data>
+  <data name="MinHPS" xml:space="preserve">
+    <value>Мин. исцеление в сек.</value>
+  </data>
+  <data name="MinResources" xml:space="preserve">
+    <value>Мин. ресурсы</value>
+  </data>
+  <data name="MinRPS" xml:space="preserve">
+    <value>Мин. ресурсы в сек.</value>
   </data>
   <data name="Player" xml:space="preserve">
     <value>Игрок</value>
@@ -129,10 +162,19 @@
   <data name="Resources" xml:space="preserve">
     <value>Ресурсы</value>
   </data>
+  <data name="ResourcesPerSecond" xml:space="preserve">
+    <value>Ресурсы в сек.</value>
+  </data>
   <data name="SelectedPlayer" xml:space="preserve">
     <value>Выбранный игрок: </value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Подробная информация</value>
+  </data>
+  <data name="TotalValue" xml:space="preserve">
+    <value>Общее значение</value>
+  </data>
+  <data name="ValuePerSecond" xml:space="preserve">
+    <value>Значение в секунду</value>
   </data>
 </root>
