--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.resx
@@ -117,6 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AverageDamage" xml:space="preserve">
+    <value>Average damage</value>
+  </data>
+  <data name="AverageDamagePerSecond" xml:space="preserve">
+    <value>Average damage per sec.</value>
+  </data>
+  <data name="AverageHeal" xml:space="preserve">
+    <value>Average heal</value>
+  </data>
+  <data name="AverageHealPerSecond" xml:space="preserve">
+    <value>Average heal per sec.</value>
+  </data>
+  <data name="AverageResources" xml:space="preserve">
+    <value>Average resources</value>
+  </data>
+  <data name="AverageResourcesPerSecond" xml:space="preserve">
+    <value>Average resources per sec.</value>
+  </data>
   <data name="CLearFilters" xml:space="preserve">
     <value>Clear all filters</value>
   </data>
@@ -168,8 +186,29 @@
   <data name="SelectedPlayer" xml:space="preserve">
     <value>Selected player: </value>
   </data>
+  <data name="ShowSummaryInform" xml:space="preserve">
+    <value>Show summary information</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Detailed information</value>
+  </data>
+  <data name="TotalDamage" xml:space="preserve">
+    <value>Total damage</value>
+  </data>
+  <data name="TotalDamagePerSecond" xml:space="preserve">
+    <value>Total damage per sec.</value>
+  </data>
+  <data name="TotalHeal" xml:space="preserve">
+    <value>Total heal</value>
+  </data>
+  <data name="TotalHealPerSecond" xml:space="preserve">
+    <value>Total heal per sec.</value>
+  </data>
+  <data name="TotalResourcesPerSecond" xml:space="preserve">
+    <value>Total resources per sec.</value>
+  </data>
+  <data name="TotalResoures" xml:space="preserve">
+    <value>Total resources</value>
   </data>
   <data name="TotalValue" xml:space="preserve">
     <value>Total value</value>
