--- a/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/DetailsSpecificalCombat/Resource.ru.resx
@@ -117,6 +117,24 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AverageDamage" xml:space="preserve">
+    <value>Средний урон</value>
+  </data>
+  <data name="AverageDamagePerSecond" xml:space="preserve">
+    <value>Средний урон в сек.</value>
+  </data>
+  <data name="AverageHeal" xml:space="preserve">
+    <value>Среднее исцеление</value>
+  </data>
+  <data name="AverageHealPerSecond" xml:space="preserve">
+    <value>Средне исцеление в сек.</value>
+  </data>
+  <data name="AverageResources" xml:space="preserve">
+    <value>Средне знач. ресурсов</value>
+  </data>
+  <data name="AverageResourcesPerSecond" xml:space="preserve">
+    <value>Средне ресурсов в сек.</value>
+  </data>
   <data name="CLearFilters" xml:space="preserve">
     <value>Очистить все фильтры</value>
   </data>
@@ -168,8 +186,29 @@
   <data name="SelectedPlayer" xml:space="preserve">
     <value>Выбранный игрок: </value>
   </data>
+  <data name="ShowSummaryInform" xml:space="preserve">
+    <value>Показать общую информацию</value>
+  </data>
   <data name="Title" xml:space="preserve">
     <value>Подробная информация</value>
+  </data>
+  <data name="TotalDamage" xml:space="preserve">
+    <value>Всего руона</value>
+  </data>
+  <data name="TotalDamagePerSecond" xml:space="preserve">
+    <value>Всего урон в сек.</value>
+  </data>
+  <data name="TotalHeal" xml:space="preserve">
+    <value>Всего исцеления</value>
+  </data>
+  <data name="TotalHealPerSecond" xml:space="preserve">
+    <value>Всего исцеление в сек.</value>
+  </data>
+  <data name="TotalResourcesPerSecond" xml:space="preserve">
+    <value>Всего ресурсов в сек.</value>
+  </data>
+  <data name="TotalResoures" xml:space="preserve">
+    <value>Всего ресурсов</value>
   </data>
   <data name="TotalValue" xml:space="preserve">
     <value>Общее значение</value>
