--- a/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.resx
@@ -120,11 +120,14 @@
   <data name="AllCombatsSaved" xml:space="preserve">
     <value>All combats saved!</value>
   </data>
+  <data name="AverageDamagePerSecond" xml:space="preserve">
+    <value>Average damage per sec.</value>
+  </data>
+  <data name="AverageHealPerSecond" xml:space="preserve">
+    <value>Average heal per sec.</value>
+  </data>
   <data name="Buffs" xml:space="preserve">
     <value>Buffs</value>
-  </data>
-  <data name="CombatUploaded" xml:space="preserve">
-    <value>Combat uploaded:   </value>
   </data>
   <data name="Damage" xml:space="preserve">
     <value>Damage</value>
@@ -162,11 +165,17 @@
   <data name="Resources" xml:space="preserve">
     <value>Resources</value>
   </data>
+  <data name="ShowAverageInform" xml:space="preserve">
+    <value>Show average information for all combats</value>
+  </data>
   <data name="Status" xml:space="preserve">
     <value>Status</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Analyzing</value>
+  </data>
+  <data name="Uploaded" xml:space="preserve">
+    <value>Uploaded:</value>
   </data>
   <data name="Uploading" xml:space="preserve">
     <value>Uploading...</value>
