--- a/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.ru.resx
+++ b/src/CombatAnalysis.App/Localizations/Resources/GeneralAnalysis/Resource.ru.resx
@@ -120,11 +120,14 @@
   <data name="AllCombatsSaved" xml:space="preserve">
     <value>Все бои сохранены!</value>
   </data>
+  <data name="AverageDamagePerSecond" xml:space="preserve">
+    <value>Средний урон в сек.</value>
+  </data>
+  <data name="AverageHealPerSecond" xml:space="preserve">
+    <value>Средне исцеление в сек.</value>
+  </data>
   <data name="Buffs" xml:space="preserve">
     <value>Усилений</value>
-  </data>
-  <data name="CombatUploaded" xml:space="preserve">
-    <value>Бой сохранен:   </value>
   </data>
   <data name="Damage" xml:space="preserve">
     <value>Урон</value>
@@ -162,11 +165,17 @@
   <data name="Resources" xml:space="preserve">
     <value>Ресурсы</value>
   </data>
+  <data name="ShowAverageInform" xml:space="preserve">
+    <value>Показать среднею информацию за все бои</value>
+  </data>
   <data name="Status" xml:space="preserve">
     <value>Статус</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Анализ</value>
+  </data>
+  <data name="Uploaded" xml:space="preserve">
+    <value>Загружено:</value>
   </data>
   <data name="Uploading" xml:space="preserve">
     <value>Загрузка...</value>
